# fsgrinder

./: .gitignore  Cargo.toml
fsoperation/: Cargo.toml
fsoperation/src/: lib.rs
src/: main.rs
