[package]
name = "fsgrinder"
version = "0.1.0"
authors = ["Markus Hosch <markus.hosch@gmx.net>"]
edition = "2018"

[dependencies]
fsoperation = { path = "fsoperation" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
either = "1.5"
failure = "0.1"
log = "0.4"
flexi_logger = "0.14"

[workspace]
